--- a/백준/Silver/1764. 듣보잡/듣보잡.md
+++ b/백준/Silver/1764. 듣보잡/듣보잡.md
@@ -1,1 +1,67 @@
+## [C++] 1764 듣보잡
 
+---
+
+<p align="center">
+<img width="800" alt="image" src="https://github.com/user-attachments/assets/dde654fa-dc6f-4012-b26f-d99bba2fcb83"/>
+<p/>
+
+---
+
+듣도 못한 사람 명단 N과 보도 못한 사람 명단 M이 주어질 때,
+
+듣도 보도 못하는 중복되는 명단을 구하여 인원수와 명단을 사전순으로 출력하는 문제이다.
+
+---
+
+문제를 보았을 때 Set 자료구조를 사용하면 좋겠다고 생각하고 문제를 풀어보았다.
+
+Set 자료구조는 Key 값이 고유하며 중복을 허용하지 않는 자료구조이며,
+
+내부적으로 RB Tree를 이용한 정렬을 통해 자료를 관리하기 때문에 풀이에 용이하다고 생각했다.
+
+---
+
+구현 방법은 이러하다.
+
+```C++
+for (int i = 0; i < n; i++) {
+    cin >> a;
+    S1.insert(a);
+}
+
+while (m--) {
+    cin >> a;
+
+    if (S1.insert(a).second) {
+
+    }
+    // insert에 실패할 경우
+    else {
+        S2.insert(a);
+    }
+}
+```
+
+Set의 insert는 반환값으로 pair<iterator, bool> 값을 리턴한다.
+
+pair.first는 삽입한 위치에 대한 iterator를 반환하게 되고,
+
+pair.second는 삽입 성공 여부에 대한 값이 bool 값으로 반환된다.
+
+그래서 second를 이용하여 값의 삽입에 실패하였다면 중복 값이 이미 존재하므로
+
+다른 Set 자료에 넣어놓고 기록하게 구현하였다.
+
+
+---
+
+```C++
+cout << S2.size() << "\n";
+for (auto i : S2) {
+    cout << i << "\n";
+}
+
+```
+
+Set 자료구조는 내부적으로 자동 정렬을 하기 때문에 바로 출력하는 것으로 정답을 맞출 수 있었다.
