--- a/백준/Silver/1181. 단어 정렬/단어 정렬.md
+++ b/백준/Silver/1181. 단어 정렬/단어 정렬.md
@@ -37,7 +37,7 @@ bool comp(string s1, string s2) {
 
 `unique`를 사용하여 중복되지 않는 값을 중복되는 값 덮어쓰고 그 위치를 `iterator`로 반환하여
 
-`erase` 함수를 사용하여 `iterator`부터 `vec.end()`까지 지우는 방식으로 구현하였다.
+`erase` 함수를 사용하여 `vec.begin()`부터 `vec.end()`까지 지우는 방식으로 구현하였다.
 
 ```cpp
     sort(vec.begin(), vec.end(), comp);
